--- a/aluraflix-aula8/aluraflix-aula8/styles.css
+++ b/aluraflix-aula8/aluraflix-aula8/styles.css
@@ -1,8 +1,8 @@
 body {
     color: white;
-    background: black;
+    background: rgb(0, 0, 0);
     margin: 0px;
-    font-family: "Chakra Petch", sans-serif;
+    font-family: "Chakra Petch", 'Times New Roman';
     margin-bottom: 100px;
 }
 
@@ -14,7 +14,7 @@ header {
 }
 
 .chamada {
-    background: rgb(184, 156, 213);
+    background: rgb(156, 187, 213);
     padding-bottom: 80px;
     padding-top: 80px;
     display: flex;
