--- a/aluraflix-aula8/aluraflix-aula8/styles.css
+++ b/aluraflix-aula8/aluraflix-aula8/styles.css
@@ -2,7 +2,7 @@ body {
     color: white;
     background: rgb(0, 0, 0);
     margin: 0px;
-    font-family: "Chakra Petch", 'Times New Roman';
+    font-family: "Chakra Petch", 'sans-serif';
     margin-bottom: 100px;
 }
 
